--- a/hugo-static-site-generator/config.yaml
+++ b/hugo-static-site-generator/config.yaml
@@ -9,13 +9,13 @@ theme: hugo-identity-theme
 params:
   personal:
     name: Andrés Valencia
-    avatar:
+    avatar: //avatars1.githubusercontent.com/u/735303?v=3&u=25bb8b7f1c676dac3e85a02fe1e5d01342459a0a&s=400
     position: Senior Engineer
     livesIn: Bogotá - Colombia
     scope:
-     - Senior Frontend Engineer at Appdirect
-     - Frontend developer at Quintiles IMS
-    biography: Discipline beats intelligence
+     - I'm a Fullstack engineer
+     - I advocate for Cloud architectures 
+    biography: 🥇 Discipline beats intelligence 🥇
 
   contact:
     email: andres.valencia.ospina@gmail.com
